--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -1,12 +1,8 @@
 {
   "compilerOptions": {
     "strict": true,
-    "target": "ES5",
     "module": "CommonJS",
-    "alwaysStrict": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
     "sourceMap": true,
-    "downlevelIteration": true
+    "lib": ["es2015", "dom"]
   }
 }
